arkts_static_test/09_Classes/ets_cases/9.1_Class_Declarations/compile-fail/CLS_09_01_008_FAIL_CLASS_NAME_KEYWORD.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id CLS_09_01_008_FAIL_CLASS_NAME_KEYWORD
 * @expect compile-fail
 * @section 9.1
 * @design 类名使用关键字导致编译错误
 * @note 反向用例：验证类名不能使用 int 等关键字
 */
class int {
  val: number = 0
}

